--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <h1>Weather</h1>
     <input type="search" id="locationInput" placeholder="LA">
-    <button onclick="getLocation()">Search</button>
+    <button onclick="userAction()">Search</button>
 
     <h2>Data</h2>
     <p>Location:
