--- a/index.html
+++ b/index.html
@@ -5,20 +5,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <h1>Weather</h1>
-    <input type="search" id="locationInput" placeholder="LA">
-    <button id="searchButton" onclick="userAction()">Search</button>
+    <div class="center-search">
+        <input type="search" id="locationInput" placeholder="LA">
+        <button id="searchButton" onclick="userAction()">Search</button>
+    </div>
+    <div class="container-row">
+        <div class="container">
+            <p>Location:
+            <p id="locationOut"></p>
+        </div>
+        <div class="container"></div>
+        <div class="container">
+            <p>Temperature:
+            <p id="tempOut"></p>
+            </p>
+        </div>
+    </div>
 
-    <h2>Data</h2>
-    <p>Location:
-    <p id="locationOut"></p>
-    </p>
-    <p>Temperature:
-    <p id="tempOut"></p>
-    </p>
     <script src="index.js"></script>
 </body>
 
