added more stats

--- a/index.html
+++ b/index.html
@@ -19,10 +19,29 @@
             <p>Location:
             <p id="locationOut"></p>
         </div>
-        <div class="container"></div>
         <div class="container">
             <p>Temperature:
             <p id="tempOut"></p>
+            </p>
+        </div>
+        <div class="container">
+            <p>Rain:
+            <p id="rainOut"></p>
+            </p>
+        </div>
+        <div class="container">
+            <p>Visibility:
+            <p id="visibilityOut"></p>
+            </p>
+        </div>
+        <div class="container">
+            <p>Clouds:
+            <p id="cloudsOut"></p>
+            </p>
+        </div>
+        <div class="container">
+            <p>Windspeed:
+            <p id="windspeedOut"></p>
             </p>
         </div>
     </div>
